--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <form method="post" action="code.php">
-            <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username"><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password"><br>
-            <input type="submit" value="Submit">
-        </form>
-    </body>
+  <head>
+    <title>GitHub Login</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div id="container">
+      <h1>Welcome to GitHub!</h1>
+      <form id="login-form">
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username"><br>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password"><br>
+        <input type="submit" value="Log In">
+      </form>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
